feat: Blur-ish background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<button id="theme">🌗</button>
 		</div>
 		<canvas></canvas>
+		<div id="sub"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
