--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<div id="ui">
 			<button id="theme">🌗</button>
 		</div>
+		<div id="rules">
+			<div class="col">
+				<div class="box red"></div>
+				<div class="mark">⤍ ▬ ⤌</div>
+			</div>
+			<div class="col">
+				<div class="box green"></div>
+				<div class="mark">⤌ ▬ ⤍</div>
+			</div>
+		</div>
 		<canvas></canvas>
 		<div id="sub"></div>
 		<script type="module" src="/src/main.ts"></script>
